--- a/DeedsBeeActivityChallenge/app/src/main/res/values/strings.xml
+++ b/DeedsBeeActivityChallenge/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">DeedsBee Activity Challenge</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_1">Score</string>
+    <string name="tab_text_2">Stats</string>
 </resources>
