--- a/DeedsBeeActivityChallenge/app/src/main/res/values/strings.xml
+++ b/DeedsBeeActivityChallenge/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">DeedsBee Activity Challenge</string>
     <string name="tab_text_1">Score</string>
     <string name="tab_text_2">Stats</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
