Added stats activity and fragments

--- a/DeedsBeeActivityChallenge/app/src/main/res/values/strings.xml
+++ b/DeedsBeeActivityChallenge/app/src/main/res/values/strings.xml
@@ -3,6 +3,15 @@
     <string name="tab_text_1">Score</string>
     <string name="tab_text_2">Stats</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="todayScoreTv">Today\'s Score:</string>
+    <string name="todayScoreResultTv">0</string>
+    <string name="distanceWalkedTv">Distance walked (m):</string>
+    <string name="distanceWalkedResultTv">0</string>
+    <string name="meterTv">meters</string>
+    <string name="scoreSpentTv">Score spent (Today):</string>
+    <string name="scoreSpentResultTv">0</string>
+    <string name="currentScoreTv">Current score:</string>
+    <string name="currentScoreResultTv">0</string>
+
+    <string name="resetScoreBtnTv">RESET SCORES</string>
 </resources>
